# ps2

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  Makefile.common  mtgs.diff  mtgs2.diff  mtgs3.diff  pushdesc.diff
pcsx2/: AsyncFileReader.h  BiosTools.cpp  BiosTools.h  CMakeLists.txt  COP0.cpp  COP0.h  COP2.cpp  Cache.cpp  Cache.h  Common.h  Config.h  Counters.cpp  Counters.h  Dmac.cpp  Dmac.h  Elfheader.cpp  Elfheader.h  FPU.cpp  FW.cpp  FW.h  FiFo.cpp  GS.cpp  GS.h  GameDatabase.cpp  GameDatabase.h  Gif.cpp  Gif.h  Gif_Logger.cpp  Gif_Unit.cpp  Gif_Unit.h  Hardware.h  Host.cpp  Host.h  HostSettings.h  Hw.cpp  Hw.h  HwInternal.h  HwRead.cpp  HwWrite.cpp  IPU.cpp  (+101 more)
pcsx2/CDVD/: BlockdumpFileReader.cpp  CDVD.cpp  CDVD.h  CDVD_internal.h  CDVDcommon.cpp  CDVDcommon.h  CDVDdiscReader.cpp  CDVDdiscReader.h  CDVDdiscThread.cpp  CDVDisoReader.cpp  ChdFileReader.cpp  ChdFileReader.h  ChunksCache.cpp  ChunksCache.h  CompressedFileReader.cpp  CsoFileReader.cpp  CsoFileReader.h  FlatFileReader.cpp  FlatFileReader.h  GzippedFileReader.cpp  GzippedFileReader.h  InputIsoFile.cpp  IsoFileFormats.h  OutputIsoFile.cpp  Ps1CD.cpp  ThreadedFileReader.cpp  ThreadedFileReader.h  zlib_indexed.h
pcsx2/CDVD/Darwin/: DriveUtility.cpp  IOCtlSrc.cpp
pcsx2/CDVD/IsoFS/: IsoDirectory.h  IsoFS.cpp  IsoFSCDVD.cpp  IsoFile.cpp
pcsx2/CDVD/Linux/: DriveUtility.cpp  IOCtlSrc.cpp
pcsx2/CDVD/Windows/: DriveUtility.cpp  IOCtlSrc.cpp
pcsx2/DEV9/: AdapterUtils.cpp  DEV9.cpp  pcap_io.cpp  sockets.cpp
pcsx2/DEV9/ATA/: ATA.h  ATA_State.cpp  ATA_Transfer.cpp  HddCreate.cpp
pcsx2/DEV9/InternalServers/: DNS_Server.cpp
pcsx2/DEV9/Sessions/ICMP_Session/: ICMP_Session.cpp
pcsx2/DEV9/Sessions/UDP_Session/: UDP_FixedPort.cpp  UDP_Session.cpp
pcsx2/DEV9/Win32/: tap-win32.cpp
pcsx2/Darwin/: DarwinFlatFileReader.cpp
pcsx2/DebugTools/: BiosDebugData.h  Breakpoints.h  Debug.h  DebugInterface.cpp  DebugInterface.h  DisASM.h  DisR5900asm.cpp  MIPSAnalyst.cpp  MIPSAnalyst.h  SymbolMap.cpp  SymbolMap.h
pcsx2/Frontend/: CommonHost.cpp  CommonHost.h  GameList.cpp  GameList.h  HostSettings.cpp  InputManager.h  InputSource.cpp  InputSource.h  LayeredSettingsInterface.cpp  LayeredSettingsInterface.h  LogSink.cpp  LogSink.h
pcsx2/GS/: GS.cpp  GS.h  GSBlock.h  GSClut.cpp  GSClut.h  GSCrc.cpp  GSDrawingContext.cpp  GSDrawingContext.h  GSDrawingEnvironment.h  GSExtra.h  GSGL.h  GSIntrin.h  GSLocalMemory.cpp  GSLocalMemory.h  GSLocalMemoryMultiISA.cpp  GSPerfMon.cpp  GSPerfMon.h  GSRegs.h  GSRingHeap.cpp  GSRingHeap.h  GSState.cpp  GSState.h  GSTables.cpp  GSTables.h  GSUtil.cpp  GSUtil.h  GSVector.cpp  GSVector.h  GSVector4.h  GSVector4i.h  GSVector8.h  GSVector8i.h  GSXXH.h  MultiISA.cpp  MultiISA.h
pcsx2/GS/Renderers/Common/: GSDevice.cpp  GSDevice.h  GSDirtyRect.cpp  GSDirtyRect.h  GSFastList.h  GSFunctionMap.cpp  GSFunctionMap.h  GSRenderer.cpp  GSRenderer.h  GSTexture.cpp  GSTexture.h  GSVertex.h  GSVertexTrace.cpp  GSVertexTraceFMM.cpp
pcsx2/GS/Renderers/DX11/: D3D.cpp  D3D.h  D3D11ShaderCache.cpp  D3D11ShaderCache.h  D3D11ShaderCompiler.cpp  GSDevice11.cpp  GSDevice11.h  GSTexture11.cpp  GSTexture11.h  GSTextureFX11.cpp  convert.fx
pcsx2/GS/Renderers/DX12/: D3D12Builders.cpp  D3D12Builders.h  D3D12Context.h  D3D12DescriptorHeapManager.cpp  D3D12ShaderCache.cpp  D3D12ShaderCache.h  D3D12StreamBuffer.cpp  D3D12StreamBuffer.h  D3D12Texture.cpp  D3D12Texture.h  D3D12Util.cpp  D3D12Util.h  GSDevice12.cpp  GSDevice12.h  GSTexture12.cpp  GSTexture12.h
pcsx2/GS/Renderers/HW/: GSHwHack.cpp  GSHwHack.h  GSRendererHW.cpp  GSRendererHW.h  GSRendererHWMultiISA.cpp  GSTextureCache.cpp  GSTextureCache.h  GSTextureReplacementLoaders.cpp  GSTextureReplacements.cpp  GSTextureReplacements.h
pcsx2/GS/Renderers/Metal/: GSDeviceMTL.h  GSDeviceMTL.mm  GSTextureMTL.mm  convert.metal  present.metal
pcsx2/GS/Renderers/Null/: GSDeviceNull.cpp  GSDeviceNull.h
pcsx2/GS/Renderers/OpenGL/: GLContext.cpp  GLContext.h  GLContextRetroGL.cpp  GLContextRetroGL.h  GLLoader.cpp  GLProgram.cpp  GLProgram.h  GLShaderCache.cpp  GLShaderCache.h  GLState.cpp  GLStreamBuffer.cpp  GLStreamBuffer.h  (+6 more)
pcsx2/IPU/: IPU.cpp  IPU.h  IPU_Fifo.cpp  IPU_Fifo.h  IPU_MultiISA.cpp  IPU_MultiISA.h  IPUdither.cpp  IPUdma.cpp  mpeg2_vlc.h  yuv2rgb.cpp  yuv2rgb.h
pcsx2/Linux/: LnxFlatFileReader.cpp
pcsx2/PAD/: KeyStatus.h  PAD.cpp  PAD.h  StateManagement.cpp
pcsx2/PAD/Host/: Global.h  KeyStatus.h  PAD.cpp  PAD.h  StateManagement.cpp  StateManagement.h
pcsx2/SPU2/: ADSR.cpp  Debug.h  Dma.cpp  DplIIdecoder.cpp  Global.h  Mixer.cpp  Mixer.h  ReadInput.cpp  RegTable.cpp  Reverb.cpp  ReverbResample.cpp  SndOut.h  defs.h  interpolate_table.h  regs.h  spu2.cpp  spu2.h  spu2freeze.cpp  spu2sys.cpp
pcsx2/USB/: USB.cpp  USB.h
pcsx2/USB/qemu-usb/: core.cpp  usb-ohci.cpp
pcsx2/USB/usb-eyetoy/: usb-eyetoy-webcam.cpp
pcsx2/USB/usb-lightgun/: guncon2.cpp
pcsx2/USB/usb-mic/: audiodev-cubeb.cpp  audiodev-noop.h  usb-mic-singstar.cpp
pcsx2/USB/usb-msd/: usb-msd.cpp
pcsx2/USB/usb-pad/: usb-pad.cpp
pcsx2/USB/usb-printer/: usb-printer.cpp
pcsx2/ps2/: BiosTools.cpp  HwInternal.h  pgif.cpp
pcsx2/ps2/Iop/: IopHwRead.cpp  IopHwWrite.cpp  IopHw_Internal.h  PsxBios.cpp
pcsx2/windows/: FlatFileReaderWindows.cpp
pcsx2/x86/: BaseblockEx.cpp  BaseblockEx.h  R5900_Profiler.h  iCOP0.cpp  iCOP0.h  iCore.cpp  iCore.h  iFPU.cpp  iFPUd.cpp  iMMI.cpp  iR3000A.cpp  iR3000A.h  iR3000Atables.cpp  iR5900-32.cpp  iR5900.cpp  iR5900.h  iR5900Analysis.cpp  iR5900Arit.h  iR5900AritImm.h  iR5900Branch.h  iR5900Jump.h  iR5900LoadStore.h  iR5900Misc.cpp  iR5900Move.h  iR5900MultDiv.h  iR5900Shift.h  microVU.cpp  microVU.h  microVU_Alloc.inl  microVU_Analyze.inl  microVU_Branch.inl  microVU_Compile.inl  microVU_Execute.inl  microVU_Flags.inl  microVU_IR.h  microVU_Log.inl  microVU_Lower.inl  microVU_Macro.inl  microVU_Misc.h  microVU_Misc.inl  (+11 more)
pcsx2/x86/ix86-32/: iCore-32.cpp  iR5900-32.cpp  iR5900Arit.cpp  iR5900AritImm.cpp  iR5900Branch.cpp  iR5900Jump.cpp  iR5900LoadStore.cpp  iR5900Move.cpp  iR5900MultDiv.cpp  iR5900Shift.cpp  iR5900Templates.cpp  recVTLB.cpp
(+173 files in other folders)
